[gd_scene load_steps=8 format=3 uid="uid://dy6bcdfq4xpc6"]

[ext_resource type="FontFile" uid="uid://b3quk5mq2160f" path="res://assets/fonts/DUKEPLUS.TTF" id="1_04yea"]
[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_kel8b"]
[ext_resource type="FontFile" uid="uid://kdp07euhvpmi" path="res://assets/fonts/Cup and Talon.ttf" id="2_jujt7"]
[ext_resource type="Texture2D" uid="uid://blt0nix8rj3vl" path="res://assets/images/title_screen.png" id="4_avhp4"]

[sub_resource type="LabelSettings" id="LabelSettings_ajpjy"]
font = ExtResource("1_04yea")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_dmwv7"]
font = ExtResource("2_jujt7")
font_size = 150

[sub_resource type="LabelSettings" id="LabelSettings_0k0s3"]
font = ExtResource("2_jujt7")
font_size = 50

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kel8b")

[node name="background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("4_avhp4")

[node name="continue" type="Label" parent="."]
layout_mode = 2
offset_top = 665.0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_vertical = 8
text = "[click to continue]"
label_settings = SubResource("LabelSettings_ajpjy")
horizontal_alignment = 1

[node name="Slide1" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Slide1"]
layout_mode = 2
text = "A DARK ALTAR"
label_settings = SubResource("LabelSettings_dmwv7")
horizontal_alignment = 1

[node name="Slide2" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Label" type="Label" parent="Slide2"]
layout_mode = 2
text = "The year is 1329. Science has answered many questions but not the questions of the soul. The church claims to have answers to these questions but offer no proof. Alas god rarely speaks to mortal men with words and angels do not answer to petty summons. Those thirsty for the forbidden knowledge of the cosmos are forced to turn to summoning demons..."
label_settings = SubResource("LabelSettings_0k0s3")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Slide3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Label" type="Label" parent="Slide3"]
layout_mode = 2
text = "You are Cedric Leopold. The founder of the society of the dark altar. The solar eclipse is in the sky. You must summon all twelve demons of the apocalyse to get the answer you need."
label_settings = SubResource("LabelSettings_0k0s3")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
